# go-through-fastapi

./: .devcontainer-internal.json  README.md  pyproject.toml
app/: main.py
