[tool.poetry]
name = "go-through-fastapi"
version = "0.1.0"
description = ""
authors = ["LaiLeeHan <allen@profetai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
